--- a/templates/TeamsAndPlayers/Auth/index.html
+++ b/templates/TeamsAndPlayers/Auth/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
 
-        <form id="register" action="#" method="post" modelAttribute="user">
+        <form id="columns" action="#" method="post" modelAttribute="user">
             <h2>Register a new User</h2>
             <div class="form-group">
                 <label for="username">Username</label>
